src/objects/Customer_Control_Segments__x.object
<CustomObject>
    <description>Customer Control Segments</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$customer_control_segments</externalName>
    <fields>
        <fullName>c_control_segment_desc__c</fullName>
        <description>c_control_segment_desc</description>
        <externalDeveloperName>c_control_segment_desc</externalDeveloperName>
        <label>c_control_segment_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_control_segment_lvl__c</fullName>
        <description>c_control_segment_lvl</description>
        <externalDeveloperName>c_control_segment_lvl</externalDeveloperName>
        <label>c_control_segment_lvl</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_customer_segment_desc__c</fullName>
        <description>c_customer_segment_desc</description>
        <externalDeveloperName>c_customer_segment_desc</externalDeveloperName>
        <label>c_customer_segment_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_customer_segment_short_desc__c</fullName>
        <description>c_customer_segment_short_desc</description>
        <externalDeveloperName>c_customer_segment_short_desc</externalDeveloperName>
        <label>c_customer_segment_short_desc</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_incented_status__c</fullName>
        <description>c_incented_status</description>
        <externalDeveloperName>c_incented_status</externalDeveloperName>
        <label>c_incented_status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_known_status__c</fullName>
        <description>c_known_status</description>
        <externalDeveloperName>c_known_status</externalDeveloperName>
        <label>c_known_status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_fk</description>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Control Segments</relationshipLabel>
        <relationshipName>Customer_Control_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_dt__c</fullName>
        <description>d_end_dt</description>
        <externalDeveloperName>d_end_dt</externalDeveloperName>
        <label>d_end_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_start_dt__c</fullName>
        <description>d_start_dt</description>
        <externalDeveloperName>d_start_dt</externalDeveloperName>
        <label>d_start_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i_control_segment__c</fullName>
        <description>i_control_segment</description>
        <externalDeveloperName>i_control_segment</externalDeveloperName>
        <label>i_control_segment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_control_segment_max__c</fullName>
        <description>i_control_segment_max</description>
        <externalDeveloperName>i_control_segment_max</externalDeveloperName>
        <label>i_control_segment_max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_control_segment_min__c</fullName>
        <description>i_control_segment_min</description>
        <externalDeveloperName>i_control_segment_min</externalDeveloperName>
        <label>i_control_segment_min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_customer_segment__c</fullName>
        <description>i_customer_segment</description>
        <externalDeveloperName>i_customer_segment</externalDeveloperName>
        <label>i_customer_segment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Control Segments</label>
    <pluralLabel>Customer Control Segments</pluralLabel>
</CustomObject>